# discord-chatgpt-chino

./: .env _example  README.md  pyproject.toml
src/: config.py  main.py
src/util/: validation.py  voice.py
