[tool.poetry]
name = "chatgpt-chino"
version = "0.1.0"
description = ""
authors = ["Dosugamea <17107514+Dosugamea@users.noreply.github.com>"]
license = "GPL-v3.0"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.2.2"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.4"
openai = "^0.27.0"
discord-py = {extras = ["voice"], version = "^2.2.2"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
